--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ diesel = {version = "1.4.5", features= ["mysql","chrono","r2d2"]}
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "1.0.22"
 actix-files = "0.5.0"
-askama = "0.10.5"
+handlebars = {version = "3.5.2", features = ["dir_source"]}
