--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ chrono = { version = "0.4", features = ["serde"] }
 thiserror = "1.0.22"
 actix-files = "0.5.0"
 handlebars = {version = "3.5.2", features = ["dir_source"]}
+actix-cors = "0.5.4"
